--- a/User.Application/User.Application.csproj
+++ b/User.Application/User.Application.csproj
@@ -7,11 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Contracts\" />
-    <Folder Include="Dtos\" />
-    <Folder Include="Errors\" />
-    <Folder Include="Mappings\" />
-    <Folder Include="Services\" />
+    <Folder Include="Services\User\Queries\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -19,6 +15,8 @@
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="MediatR" Version="12.4.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="7.5.1" />
+    <PackageReference Include="NetDevPack.Security.Jwt.AspNetCore" Version="8.1.5" />
   </ItemGroup>
 
   <ItemGroup>
