--- a/YARPGateway.API/appsettings.Development.json
+++ b/YARPGateway.API/appsettings.Development.json
@@ -1,8 +1,29 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+  "ReverseProxy": {
+    "Clusters": {
+      "UserAPI": {
+        "Destinations": {
+          "UserAPIDestination1": {
+            "Address": "http://host.docker.internal:8080/"
+          }
+        }
+      }
+    },
+    "Routes": {
+      "Authenticate": {
+        "ClusterId": "UserAPI",
+        "AuthorizationPolicy": "anonymous",
+        "Match": {
+          "Path": "/api/v1/authenticate/{**catch-all}"
+        }
+      },
+      "User": {
+        "ClusterId": "UserAPI",
+        "AuthorizationPolicy": "default",
+        "Match": {
+          "Path": "/api/v1/userprofile/{**catch-all}"
+        }
+      }
     }
   }
 }
