--- a/User.API/appsettings.Development.json
+++ b/User.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=D:\\WorksGit\\backend-app\\Database\\user.db"
+    "DefaultConnection": "Data Source=user.db"
   },
   "Logging": {
     "LogLevel": {
