#bug fix and improvements

--- a/YARPGateway.API/appsettings.Development.json
+++ b/YARPGateway.API/appsettings.Development.json
@@ -21,7 +21,7 @@
         "ClusterId": "UserAPI",
         "AuthorizationPolicy": "default",
         "Match": {
-          "Path": "/api/v1/userprofile/{**catch-all}"
+          "Path": "/api/v1/user/{**catch-all}"
         }
       }
     }
