--- a/User.API/appsettings.Development.json
+++ b/User.API/appsettings.Development.json
@@ -2,6 +2,10 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=Database/user.db"
   },
+  "JwtOptions": {
+    "Issuer": "https://host.docker.internal:8081",
+    "Audience": "NetDevPack.Security.Jwt.AspNet"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
