#implementation API Log, Mongodb connection, recever and consumer to log user api

--- a/User.API/appsettings.json
+++ b/User.API/appsettings.json
@@ -9,5 +9,10 @@
       "Enable": false
     }
   },
+  "MessageBrokerLog": {
+    "BaseAddress": "https://localhost:5061",
+    "AccessToken": "",
+    "UserAgent": ""
+  },
   "AllowedHosts": "*"
 }
