#implementation database log

--- a/LogMessageBroker.API/appsettings.Development.json
+++ b/LogMessageBroker.API/appsettings.Development.json
@@ -6,12 +6,13 @@
     }
   },
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "rabbitmq",
     "UserName": "guest",
-    "Password": "guest"
+    "Password": "guest",
+    "Port": 5672
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://localhost:27017",
+    "ConnectionString": "mongodb://root:password@mongodb:27017/admin",
     "DatabaseName": "logsAPI"
   }
 }
