--- a/User.API/appsettings.json
+++ b/User.API/appsettings.json
@@ -10,7 +10,7 @@
     }
   },
   "MessageBrokerLog": {
-    "BaseAddress": "https://localhost:5061",
+    "BaseAddress": "https://host.docker.internal:5061",
     "AccessToken": "",
     "UserAgent": ""
   },
