--- a/User.API/appsettings.Development.json
+++ b/User.API/appsettings.Development.json
@@ -5,5 +5,10 @@
   "JwtOptions": {
     "Issuer": "https://host.docker.internal:8081",
     "Audience": "NetDevPack.Security.Jwt.AspNet"
+  },
+  "RabbitMqLoggingConfig": {
+    "ConnectionString": "amqp://guest:guest@rabbitmq:5672",
+    "QueueNameTrace": "userTraceAPIQueue",
+    "QueueNameLog": "userLogAPIQueue"
   }
 }
