--- a/YARPGateway.API/appsettings.json
+++ b/YARPGateway.API/appsettings.json
@@ -4,10 +4,12 @@
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
-    },
-    "Trace": {
-      "Enable": false
     }
+  },
+  "RabbitMqLoggingConfig": {
+    "ConnectionString": "amqp://guest:guest@rabbitmq:5672",
+    "QueueNameTrace": "gatewayTraceAPIQueue",
+    "QueueNameLog": "gatewayLogAPIQueue"
   },
   "AllowedHosts": "*"
 }
