--- a/User.API/User.API.csproj
+++ b/User.API/User.API.csproj
@@ -18,6 +18,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Refit" Version="7.1.2" />
     <PackageReference Include="Refit.HttpClientFactory" Version="7.1.2" />
+    <PackageReference Include="RequestLoggingMiddlewareLib" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
@@ -25,12 +26,6 @@
     <ProjectReference Include="..\EventBusRabbitMQ\EventBusRabbitMQ.csproj" />
     <ProjectReference Include="..\User.Application\User.Application.csproj" />
     <ProjectReference Include="..\User.Infrastructure\User.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="RequestLoggingMiddlewareLib">
-      <HintPath>..\..\RequestLoggingComponent\src\RequestLoggingMiddlewareLib\bin\Debug\net8.0\RequestLoggingMiddlewareLib.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
