--- a/YARPGateway.API/YARPGateway.API.csproj
+++ b/YARPGateway.API/YARPGateway.API.csproj
@@ -13,16 +13,9 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.8" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="NetDevPack.Security.JwtExtensions" Version="8.0.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
+    <PackageReference Include="RequestLoggingMiddlewareLib" Version="1.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.3" />
     <PackageReference Include="Yarp.ReverseProxy" Version="2.2.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="RequestLoggingMiddlewareLib">
-      <HintPath>..\..\RequestLoggingComponent\src\RequestLoggingMiddlewareLib\bin\Debug\net8.0\RequestLoggingMiddlewareLib.dll</HintPath>
-    </Reference>
   </ItemGroup>
 
 </Project>
