#chance sqllite to sqlserver connection and kubernetes files

--- a/LogMessageBroker.API/appsettings.Development.json
+++ b/LogMessageBroker.API/appsettings.Development.json
@@ -6,13 +6,13 @@
     }
   },
   "RabbitMQ": {
-    "HostName": "rabbitmq",
+    "HostName": "rabbitmq-service",
     "UserName": "guest",
     "Password": "guest",
     "Port": 5672
   },
   "MongoDbSettings": {
-    "ConnectionString": "mongodb://root:password@mongodb:27017/admin",
+    "ConnectionString": "mongodb://root:password@mongodb-service:27017/admin",
     "DatabaseName": "logsAPI"
   }
 }
