--- a/User.API/appsettings.Development.json
+++ b/User.API/appsettings.Development.json
@@ -1,13 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Database/user.db"
+    "DefaultConnection": "Server=localhost\\SQLEXPRESS;Database=Identity;Trusted_Connection=True;TrustServerCertificate=True;Encrypt=False;"
   },
   "JwtOptions": {
     "Issuer": "https://host.docker.internal:8081",
     "Audience": "NetDevPack.Security.Jwt.AspNet"
   },
   "RabbitMqLoggingConfig": {
-    "ConnectionString": "amqp://guest:guest@rabbitmq:5672",
+    "ConnectionString": "amqp://guest:guest@rabbitmq-service:5672",
     "QueueNameTrace": "userTraceAPIQueue",
     "QueueNameLog": "userLogAPIQueue"
   }
