--- a/YARPGateway.API/appsettings.Development.json
+++ b/YARPGateway.API/appsettings.Development.json
@@ -4,7 +4,7 @@
       "UserAPI": {
         "Destinations": {
           "UserAPIDestination1": {
-            "Address": "http://host.docker.internal:8080/"
+            "Address": "http://user-api-service:8080/"
           }
         }
       }
