--- a/YARPGateway.API/appsettings.json
+++ b/YARPGateway.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "RabbitMqLoggingConfig": {
-    "ConnectionString": "amqp://guest:guest@rabbitmq:5672",
+    "ConnectionString": "amqp://guest:guest@rabbitmq-service:5672",
     "QueueNameTrace": "gatewayTraceAPIQueue",
     "QueueNameLog": "gatewayLogAPIQueue"
   },
