--- a/kubernetes/persistent-volume.yaml
+++ b/kubernetes/persistent-volume.yaml
@@ -1,3 +1,5 @@
+---
+# PersistentVolume for MongoDB
 apiVersion: v1
 kind: PersistentVolume
 metadata:
@@ -8,9 +10,9 @@ spec:
   accessModes:
     - ReadWriteOnce
   hostPath:
-    path: /data/mongodb
-
+    path: /data/mongodb  # Path on the host system where MongoDB data will be stored
 ---
+# PersistentVolumeClaim for MongoDB
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -21,3 +23,4 @@ spec:
   resources:
     requests:
       storage: 1Gi
+---
