--- a/kubernetes/service.yaml
+++ b/kubernetes/service.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
@@ -8,14 +9,9 @@ spec:
   ports:
     - port: 8080
       targetPort: 8080
+      nodePort: 30000
       protocol: TCP
-      name: http
-    - port: 8081
-      targetPort: 8081
-      protocol: TCP
-      name: https
-  type: ClusterIP
-
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -27,14 +23,9 @@ spec:
   ports:
     - port: 8084
       targetPort: 8084
+      nodePort: 30001
       protocol: TCP
-      name: http
-    - port: 8085
-      targetPort: 8085
-      protocol: TCP
-      name: https
-  type: ClusterIP
-
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -46,14 +37,9 @@ spec:
   ports:
     - port: 5060
       targetPort: 5060
+      nodePort: 30002
       protocol: TCP
-      name: http
-    - port: 5061
-      targetPort: 5061
-      protocol: TCP
-      name: https
-  type: ClusterIP
-
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -65,14 +51,15 @@ spec:
   ports:
     - port: 5672
       targetPort: 5672
+      nodePort: 30003
       protocol: TCP
       name: amqp
     - port: 15672
       targetPort: 15672
+      nodePort: 30004
       protocol: TCP
       name: management
-  type: ClusterIP
-
+  type: NodePort
 ---
 apiVersion: v1
 kind: Service
@@ -84,6 +71,6 @@ spec:
   ports:
     - port: 27017
       targetPort: 27017
+      nodePort: 30005
       protocol: TCP
-      name: mongodb
-  type: ClusterIP
+  type: NodePort
